<resources>
    <string name="app_name">LearningApp.Android</string>
    <string name="title_selection">Выбор языка программирования</string>
    <string name="python">Python</string>
    <string name="csharp">C#</string>
    <string name="cpp">C++</string>
    <string name="java">Java</string>
    <string name="javascript">Java Script</string>
    <string name="html_css">HTML/CSS</string>
    <string name="not_found">Не нашли язык?</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="support_icon_desc">Иконка службы поддержки</string>


</resources>