<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E3D32"
    tools:context=".MainActivity">

    <!-- Заголовок -->

    <!-- Кнопки для языков программирования -->

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:text="@string/title_selection"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintMarginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_python"
        style="@style/ButtonStyle"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background2"
        android:text="@string/python"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:radius="16dp"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_csharp"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/csharp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_python"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_cpp"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/cpp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_csharp"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_java"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/java"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cpp"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/btn_javascript"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/javascript"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_java"
        app:layout_constraintWidth_percent="0.7" />

    <!-- Текст "Не нашли язык?" -->
    <Button
        android:id="@+id/btn_htmlcss"
        style="@style/ButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/html_css"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintMarginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_javascript"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/tv_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/not_found"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintMarginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_htmlcss" />

</androidx.constraintlayout.widget.ConstraintLayout>
